feat(http-client): implement ResilientHttpAdapter with async retry support
Implement ResilientHttpAdapter as a decorator for any HttpAdapter that adds
non-blocking retry with exponential backoff. This completes Task 13 of the
HTTP client extension plan.

Key Features:
- Wraps any HttpAdapter implementation
- Async-first design using CompletableFuture
- Non-blocking delays via CompletableFuture.delayedExecutor
- Exponential backoff with jitter (configurable via RetryConfig)
- Idempotency-aware retry (POST/PATCH skipped by default)
- Retries only transient failures (NETWORK_ERROR, SERVER_ERROR)
- Tail recursion via thenCompose (no stack overflow)

Implementation Details:
- All HTTP methods delegate to executeWithRetry()
- Retry logic checks: success, idempotency, retryability, max attempts
- Logging: DEBUG for attempts, WARN for retries and exhaustion
- Factory methods: wrap(adapter) with defaults, wrap(adapter, config)
- Thread-safe operation (no shared mutable state)

Test Coverage (18 tests, 100% pass):
- Retry on NETWORK_ERROR and SERVER_ERROR
- No retry on CLIENT_ERROR, INVALID_CONTENT, CONFIGURATION_ERROR
- Max attempts respected
- idempotentOnly=true skips POST/PATCH (default, safe)
- idempotentOnly=false retries all methods (explicit opt-in)
- Async delays verified (non-blocking)
- Success on first attempt and retry attempts
- Idempotent methods (GET, PUT, DELETE, HEAD, OPTIONS) retried by default
- Factory methods and constructor validation

Task 13 Status: Complete
- ResilientHttpAdapter implemented
- All acceptance criteria met
- Test coverage ≥ 80% (18 comprehensive tests)
- Build passes with pre-commit checks
- Code formatted with OpenRewrite

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>